--- a/WebSiteClothesStore/Views/DonDatHang/ListDonHangDaGiao.cshtml
+++ b/WebSiteClothesStore/Views/DonDatHang/ListDonHangDaGiao.cshtml
@@ -18,6 +18,15 @@
             @Html.DisplayNameFor(model => model.KhachHang.TenKH)
         </th>
         <th>
+            SĐT
+        </th>
+        <th>
+            Địa chỉ
+        </th>
+        <th>
+            Email
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.TinhTrangDDH)
         </th>
         <th>
@@ -40,50 +49,59 @@
 
     @foreach (var item in Model)
     {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.KhachHang.TenKH)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TinhTrangDDH)
-            </td>
-            <td>
+<tr>
+    <td>
+        @Html.DisplayFor(modelItem => item.KhachHang.TenKH)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.KhachHang.SDT)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.KhachHang.DiaChi)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.KhachHang.Email)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.TinhTrangDDH)
+    </td>
+    <td>
 
-                @{
-                    if (item.DaThanhToan == true)
-                    {
-                        <p>Đã thanh toán</p>
+        @{
+            if (item.DaThanhToan == true)
+            {
+                <p>Đã thanh toán</p>
 
-                    }
-                    else
-                    {
-                        <p>Chưa thanh toán</p>
+            }
+            else
+            {
+                <p>Chưa thanh toán</p>
 
-                    }
-                }
+            }
+        }
 
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UuDai)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.NgayDat)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.NgayGiao)
-            </td>
-            <td>
-                @{
-                    double tongTien = (double)context.CTDonDatHangs.Where(p => p.MaDDH == item.MaDDH).Sum(n => n.SoLuong * n.DonGia);
-                }
-                @tongTien.ToString("#,##") VNĐ
-            </td>
-            <td>
-              
-                @Html.ActionLink("Details", "DetailDHH", new { id = item.MaDDH })
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.UuDai)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.NgayDat)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.NgayGiao)
+    </td>
+    <td>
+        @{
+            double tongTien = (double)context.CTDonDatHangs.Where(p => p.MaDDH == item.MaDDH).Sum(n => n.SoLuong * n.DonGia);
+        }
+        @tongTien.ToString("#,##") VNĐ
+    </td>
+    <td>
 
-            </td>
-        </tr>
+        @Html.ActionLink("Details", "DetailDHH", new { id = item.MaDDH })
+
+    </td>
+</tr>
 
     }
     <tr>
