Mđ coi email có lỗi thì note lại

--- a/WebSiteClothesStore/Views/BangSanPham/Edit.cshtml
+++ b/WebSiteClothesStore/Views/BangSanPham/Edit.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/HomeLayout/ProductLayout.cshtml";
 }
 
-<h2>Chỉnh Sửa Sản Phẩm/h2>
+<h2>Chỉnh Sửa Sản Phẩm</h2>
 
 @using (Html.BeginForm())
 {
