--- a/WebSiteClothesStore/Views/CTSanPham/Create.cshtml
+++ b/WebSiteClothesStore/Views/CTSanPham/Create.cshtml
@@ -32,7 +32,7 @@
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(model => model.MaSP, "MaLoai", htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.MaSP, "MaSP", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             <select name="SanPham">
                 @foreach (var item in ViewBag.BangSanPham)
