Xonng mọi thanh toán mọi người tập trung làm giao diejn

--- a/WebSiteClothesStore/Views/Card/ThongBaoDatHang.cshtml
+++ b/WebSiteClothesStore/Views/Card/ThongBaoDatHang.cshtml
@@ -6,7 +6,8 @@
 
 <h2>Thông báo đặt hàng</h2>
 
-<p>
+<h3>
     Cảm ơn bạn đã tin tưởng và ủng hộ shop chúng tôi sẽ giao hàng nhanh nhất có thể xin cảm ơn !
-</p>
+</h3>
 
+<a href="@Url.Action("ShowCardUser","Home")">Xem tất cả đơn hàng của bạn</a>
