--- a/WebSiteClothesStore/Views/DonDatHang/ListDonDatHangDaHuy.cshtml
+++ b/WebSiteClothesStore/Views/DonDatHang/ListDonDatHangDaHuy.cshtml
@@ -7,7 +7,7 @@
     MydataContext context = new MydataContext();
 }
 
-<h2>Các đơn hàng đang giao</h2>
+<h2>Các đơn hàng đã bị hủy</h2>
 
 
 <table class="table">
@@ -47,65 +47,48 @@
 
     @foreach (var item in Model)
     {
-<tr id="@item.MaDDH">
-    <td>
-        @Html.DisplayFor(modelItem => item.KhachHang.TenKH)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.KhachHang.SDT)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.KhachHang.DiaChi)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.KhachHang.Email)
-    </td>
-    <td>
-        <p class="trangThaiGiao">@item.TinhTrangDDH</p>
-    </td>
-    <td>
-        <select name="tinhTrangThanhToan" class="selectTinhTrangDonHang">
-            @{
-                if (item.DaThanhToan == true)
-                {
-                    <option value="true"> Đã thanh toán</option>
-                    <option value="false"> Chưa thanh toán</option>
-                    <option value="false"> Khách không nhận hàng</option>
+        <tr id="@item.MaDDH">
+            <td>
+                @Html.DisplayFor(modelItem => item.KhachHang.TenKH)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.KhachHang.SDT)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.KhachHang.DiaChi)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.KhachHang.Email)
+            </td>
+            <td>
+                <p class="trangThaiGiao">@item.TinhTrangDDH</p>
+            </td>
+            <td>
+               Đã hủy
+
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.UuDai)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.NgayDat)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.NgayGiao)
+            </td>
+            <td>
+                @{
+                    double tongTien = (double)context.CTDonDatHangs.Where(p => p.MaDDH == item.MaDDH).Sum(n => n.SoLuong * n.DonGia);
                 }
-                else
-                {
-                    <option value="false"> Chưa thanh toán</option>
-                    <option value="true"> Đã thanh toán</option>
-                    <option value="false"> Khách không nhận hàng</option>
-                }
+                @tongTien.ToString("#,##") VNĐ
+            </td>
+            <td>
+                <button class="capNhatTrangThai" data-id="@item.MaDDH"> Cập nhật</button>
 
-            }
+                @Html.ActionLink("DeleteDDH", "DonDatHang", new { id = item.MaDDH })
 
-        </select>
-
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.UuDai)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.NgayDat)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.NgayGiao)
-    </td>
-    <td>
-        @{
-            double tongTien = (double)context.CTDonDatHangs.Where(p => p.MaDDH == item.MaDDH).Sum(n => n.SoLuong * n.DonGia);
-        }
-        @tongTien.ToString("#,##") VNĐ
-    </td>
-    <td>
-        <button class="capNhatTrangThai" data-id="@item.MaDDH"> Cập nhật</button>
-
-        @Html.ActionLink("DetailDHH", "DonDatHang", new { id = item.MaDDH })
-
-    </td>
-</tr>
+            </td>
+        </tr>
 
     }
     <tr>
