--- a/WebSiteClothesStore/Views/TimKiem/KQTimKiemPartial.cshtml
+++ b/WebSiteClothesStore/Views/TimKiem/KQTimKiemPartial.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<WebSiteClothesStore.Models.BangSanPham>
+﻿
+@model IEnumerable<WebSiteClothesStore.Models.BangSanPham>
 <div class="col-md-9 product">
     <div class=" bottom-product">
         @foreach (var item in Model)
